--- a/views/info.ejs
+++ b/views/info.ejs
@@ -66,7 +66,7 @@
 		const delete_button = document.querySelector(".delete_button");
 		back_button.addEventListener("click", (e) => {
 			e.preventDefault();
-			window.location.href = "/home";
+			window.location.href = "/";
 		});
 		edit_button.addEventListener("click", (e) => {
 			e.preventDefault();
