--- a/views/create.ejs
+++ b/views/create.ejs
@@ -41,7 +41,7 @@
 		const back_button = document.querySelector(".back_button");
 		back_button.addEventListener("click", (e) => {
 			e.preventDefault();
-			window.location.href = "/home";
+			window.location.href = "/";
 		});
 	</script>
 </html>
